Updated nginx.conf and added site specific.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@
 # Default: nobody nobody
 # https://nginx.org/en/docs/ngx_core_module.html#user
 # https://en.wikipedia.org/wiki/Principle_of_least_privilege
-user www-data;
+user nginx;
 
 # Sets the worker threads to the number of CPU cores available in the system for
 # best performance. Should be > the number of CPU cores.
@@ -145,6 +145,7 @@ http {
   # Include files in the conf.d folder.
   # `server` configuration files should be placed in the conf.d folder.
   # The configurations should be disabled by prefixing files with a dot.
-  include conf.d/*.conf;
+  # include conf.d/*.conf;
+  include /etc/nginx/sites-enabled/*.conf;
 
 }
