Removed HTTPS redirect

--- a/sites-available/pickmybestphoto.com.conf
+++ b/sites-available/pickmybestphoto.com.conf
@@ -4,7 +4,7 @@ server {
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location /static/ {
-        root /var/www/pickmybestphoto.com/photovote;
+        root /var/www/html/pickmybestphoto.com/photovote;
     }
 
 
@@ -44,10 +44,10 @@ server {
 
 }
 
-
-server {
-    listen         80;
-    return 301 https://$host$request_uri;
-}
+# Not needed if we're using AWS load balancer, which will take care of SSL
+#server {
+#    listen         80;
+#    return 301 https://$host$request_uri;
+#}
 
 
